src/test/deca/context/valid/ContextAvecObjet/DeclMeth/declMethArg.deca
// Description:
//    Déclaration d'une méthode avec un argument
//
// Resultats:
//    ok
//
class A{

    int x;

    void setX(int y){
        x = y;
    }
}
