src/test/deca/context/invalid/provided/ContextSansObjet/IdentificationIntAssignString.deca
//Description :
//	affectation d'un string à une variable définie comme int
//
//Résultats :
//	Erreur contextuelle
//	Ligne 10 : 

{
	int x;
	x = "Hello";
	println(x);
}